[package]
name = "quantum-chess"
version = "0.1.0"
edition = "2021"
authors = ["Quantum Chess Team"]
description = "A quantum chess game integrated with Core blockchain"
repository = "https://github.com/quantum-chess/quantum-chess"
license = "MIT"

[dependencies]
# Web framework
actix-web = "4.3.1"
actix-rt = "2.8.0"
actix-cors = "0.6.4"
actix-web-actors = "4.2.0"

# Serialization/Deserialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# Blockchain and Cryptography
sha2 = "0.10.6"
hex = "0.4.3"
ed25519-dalek = "1.0.1"
rand = "0.8.5"

# Game Logic
chess = "3.2.0"

# Quantum Mechanics Simulation
num-complex = "0.4.3"
ndarray = "0.15.6"
statrs = "0.16.0"

# Async and Futures
tokio = { version = "1.28.2", features = ["full"] }
futures = "0.3.28"

# Logging and Error Handling
log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1.0.40"
anyhow = "1.0.71"

# Database
sqlx = { version = "0.6.3", features = ["runtime-actix-native-tls", "postgres"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }

# Configuration
config = "0.13.3"
dotenv = "0.15.0"
clap = "2.34.0" # Command line argument parsing

# Blockchain wallet integration
ethers = { version = "2.0.4", features = ["abigen", "ws", "rustls"] }
regex = "1.9.1"
eyre = "0.6.8"

[dev-dependencies]
mockall = "0.11.4"
test-case = "3.1.0"
proptest = "1.2.0"

[profile.release]
opt-level = 3
lto = true
debug = false
