[package]
name = "deploy_tool"
version = "0.1.0"
edition = "2021"
description = "A tool for deploying smart contracts to testnet"

[dependencies]
# Ethereum/blockchain libraries
ethers = { version = "2.0", features = ["legacy"] }
ethers-core = "2.0"
ethers-providers = "2.0"
ethers-signers = "2.0"
ethers-contract = "2.0"

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Error handling
eyre = "0.6"
anyhow = "1.0"
thiserror = "1.0"

# Environment and configuration
dotenv = "0.15"
clap = { version = "4.3", features = ["derive"] }

# Utilities
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.8"
log = "0.4"
env_logger = "0.10"

[[bin]]
name = "deploy_contract"
path = "src/main.rs"

